--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,11 +136,11 @@ body {
 /* main a -- links */
 
 /* a {
-  color: #009688;
+  color: #FFC0CB;
 } */
 
 a {
-  color: #004d40;
+  color: #FFC0CB;
 }
 
 /* main blockqoute */
