--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,7 @@ h3 {
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: #FFC0CB;
   height: 100%;
   left: 0;
   position: absolute;
