--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
   /* background-size: cover;  */
   margin: -31px; 
   margin-left:-7px;
-  border: 6px solid rgba(0, 255, 192, 203); 
+  border: 6px solid #FFC0CB; 
   border-radius: 50% !important;
 }
 
